# django_stripe

./: .gitignore  README.md  requirements.txt  requirements_tests.txt  setup.cfg  setup.py  view_mixins.py
.github/workflows/: django_stripe.yml
django_stripe/: __init__.py  apps.py  conf.py  exceptions.py  forms.py  logging.py  models.py  payments.py  permissions.py  serializers.py  settings.py  signal_receivers.py  signals.py  tests.py  types.py  urls.py  utils.py  view_mixins.py  views.py
django_stripe/static/css/django_stripe/: materialize-dialog.css  override-materialize.css  pricing.css  store.css
django_stripe/static/js/: orig_payment.js
django_stripe/static/js/django_stripe/: api.js  formatters.js  payments.js  store.js  web_client.js
django_stripe/templates/django_stripe/: base_portal.html  checkout.html  subscription_form.html  subscription_history.html  subscription_portal.html
django_stripe/templatetags/: number_formats.py  prices.py
tests/: conftest.py  settings.py  test_api.py  test_payments.py  test_selenium.py  test_views.py  urls.py  wsgi.py
tests/django_stripe_testapp/: admin.py  apps.py  models.py
tests/django_stripe_testapp/migrations/: 0001_initial.py  0002_user_allowed_access_until.py
