[bdist_wheel]
universal = 1

[metadata]
name = django_stripe
license_file = LICENSE.txt
author = Paul Martin
url = https://github.com/primal100/django_stripe
description = Easier management of subscriptions with Stripe in Django
long_description = file: README.txt
long_description_content_type = text/plain
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
packages =
    django_stripe
python_requires = >=3.6
install_requires =
    django
    djangorestframework
    inflect
    stripe
    typing-extensions>=3.10.0.0; python_version < "3.8"
